@@ -9,6 +9,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class MemFileStroageRecordImpl implements IFileStroageRecord {
 
@@ -28,7 +29,7 @@ public class MemFileStroageRecordImpl implements IFileStroageRecord {
 
     @Override
     public List<FileInfo> list(FileInfo fileInfo) {
-        return fileInfos.stream().filter(e -> !StringUtils.hasLength(fileInfo.getId()) || fileInfo.getId().equals(e.getId())).filter(e -> !StringUtils.hasLength(fileInfo.getPlatform()) || fileInfo.getPlatform().equals(e.getPlatform())).filter(e -> !StringUtils.hasLength(fileInfo.getAlias()) || fileInfo.getAlias().contains(e.getAlias())).filter(e -> !StringUtils.hasLength(fileInfo.getOriginalFilename()) || fileInfo.getOriginalFilename().contains(e.getOriginalFilename())).toList();
+        return fileInfos.stream().filter(e -> !StringUtils.hasLength(fileInfo.getId()) || fileInfo.getId().equals(e.getId())).filter(e -> !StringUtils.hasLength(fileInfo.getPlatform()) || fileInfo.getPlatform().equals(e.getPlatform())).filter(e -> !StringUtils.hasLength(fileInfo.getAlias()) || fileInfo.getAlias().contains(e.getAlias())).filter(e -> !StringUtils.hasLength(fileInfo.getOriginalFilename()) || fileInfo.getOriginalFilename().contains(e.getOriginalFilename())).collect(Collectors.toList());
     }
 
     @Override
